# ddb-writer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/ddb_writer/: __init__.py  writer.py
