[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddb_writer"
version = "0.1.0"
description = "A utility for writing data to DynamoDB"
readme = "README.md"
authors = [
  { name="Obiwan", email="obiwan@example.com" },
]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3",
    "pyspark",
    "retry",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/reco-obiwan/go-ai"
"Bug Tracker" = "https://github.com/reco-obiwan/go-ai/issues"
